# zimperium-051525

./: README.md
JAVA/: .gitignore  README.md
JAVA/.github/: copilot-instructions.md
JAVA/.github/workflows/: CI.md
JAVA/ex1-enhance/: README.md
JAVA/ex1-enhance/java-producer-consumer/: README.md  pom.xml
JAVA/ex2-fix-bugs/ex2a/: README.md
JAVA/ex2-fix-bugs/ex2b/: README.md
JAVA/ex3-code-coverage/: README.md
JAVA/ex3-code-coverage/OrderProcessorJava/: README.md  pom.xml
JAVA/ex4-rest/: README.md  doc.md
JAVA/ex4-rest/scripts/: inventory.sql
JAVA/ex5-assembly-line/: README.md
JAVA/ex5-assembly-line/assembly-line-simulation/: pom.xml
JAVA/ex6-practices/: README.md
JAVA/ex7-simulation/: README.md  doc.txt
work/: .gitignore
work/.github/: copilot-instructions.md
work/.github/workflows/: CI.md
work/ex1-enhance/: README.md  promise.cpp
work/ex2-fix-issue/: README.md  deadlock.cpp
work/ex3-code-coverage/: README.md
work/ex3-pipeline/: README.md  doc.md
work/ex4-db/: README.md  doc.md
work/ex5-assembly-line/: .gitignore  CMakeLists.txt  README.md
work/ex5-assembly-line/src/: FactoryAssemblyLine.h  FactoryAssemblyLne.cpp
work/ex5-assembly-line/tests/: FactoryAssemblyLineTest.cpp
work/ex6-transform/: README.md
work/ex7-simulation/: README.md  doc.txt
work/intro/: prompts.md
work/review/: .gitignore  CMakeLists.txt  README.md  notes.md
work/review/.github/: copilot-instructions.md
work/review/.github/workflows/: README.md  build-test.yml
work/review/src/: main.cpp  task.cpp  task.h
work/review/tests/: test_task.cpp
(+30 files in other folders)
